# WebServer-Mohostan

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker.env  pyproject.toml  requirements.txt  run_uvicorn.sh
alembic/: README.md  env.py
alembic/versions/: 1429815b8232_add_command.py  6fb92e316c13_add_cascade_for_command.py  7614c2846655_init_db.py  7f880b95b5b9_add_video.py  b3c7aa8fbcb8_add_user.py  bc65f24d78d4_remove_relationship_from_commands.py  c00ed4a71ce0_add_cascade_for_command.py  e6c6ad221ed1_init.py  ec59cff9a11d_change_user.py  f1fb8d64f2d0_add_type.py
scripts/: README.md  docker_cleanup.sh  run_gunicorn.sh  test_coverage.sh  update_app.sh
src/: Dockerfile  config.py  constants.py  crud.py  database.py  default_responses.py  json_res.py  json_responses.py  main.py  schemas.py  service.py  services.py  utils.py
src/commands/: controller.py  models.py  router.py  schemas.py  services.py
src/commands_types/: controller.py  models.py  router.py  schemas.py  services.py
src/responses/: schemas.py
src/schemas/: response.py
src/types/: models.py  router.py  schemas.py  services.py
src/users/: models.py  router.py  schemas.py  services.py  utils.py
src/users/services/: cookie.py  database.py  manager.py
src/videos/: models.py  router.py  schemas.py  services.py
tests/: conftest.py  test_commands.py  test_commands_types.py  test_users.py
