[tool.poetry]
name = "webserver-mohostan"
version = "1.6.1"
description = "Сервер для внутренних нужд"
authors = ["Евгений Капустин <kapustaevg@gmail.com>"]
license = "GPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
fastapi-cache2 = "^0.2.1"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.12"
alembic = "^1.10.4"
asyncpg = "^0.27.0"
redis = "^4.5.4"
gunicorn = "^20.1.0"
passlib = "^1.7.4"
PyJWT = "^2.6.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
